# tgcaptcha-rs

./: Cargo.toml  Config.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml  rust.yml
src/: commands.rs  config.rs  config2.rs  main.rs  utils.rs
src/commands/: admin.rs  mod.rs  user.rs
src/crates/: error.rs  internals.rs  mod.rs
src/join_captcha/: math_captcha.rs  mod.rs  msgs.rs
src/join_check/: mod.rs
src/join_check/captcha/: math_question.rs  mod.rs
