[package]
name = "tgcaptcha-rs"
authors = ["Saeid Ghafari <saeid025@yahoo.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/YouKnow-sys/tgcaptcha-rs"
license = "MIT"
description = "A Telegram bot that validates new users that enter to the supergroup or group with a simple math question."
keywords = ["telegram", "bot", "captcha", "group", "supergroup"]
readme = "README.md"
publish = false

[dependencies]
log = { version = "0.4" }
pretty_env_logger = { version = "0.5" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13", features = ["toml"] }
dashmap = { version = "5.5" }
humantime-serde = { version = "1.1" }
serde_with = { version = "3.3" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = true
panic = "abort"
