[package]
name = "tgcaptcha-rs"
authors = ["Saeid Ghafari <saeid025@yahoo.com>"]
version = "0.1.3"
edition = "2021"
repository = "https://github.com/YouKnow-sys/tgcaptcha-rs"
license = "MIT"
description = "A Telegram bot that validates new users that enter to the supergroup or group with a simple math question."
keywords = ["telegram", "bot", "captcha", "group", "supergroup"]
readme = "README.md"

[dependencies]
log = { version = "0.4" }
pretty_env_logger = { version = "0.5" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13", features = ["toml"] }
dashmap = { version = "5.5" }
humantime = { version = "2.1" }
humantime-serde = { version = "1.1" }
serde_with = { version = "3.5" }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
anyhow = { version = "1.0" }
chrono = { version = "0.4" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = true
panic = "abort"
